# finshield-ai

./: .env.example  .gitignore  AWS_DEPLOYMENT_GUIDE.md  AWS_INFRASTRUCTURE_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  GITHUB_SECRETS_SETUP.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/app/: config.py  constants.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: analytics.py  auth.py  credentials.py  customers.py  data_sources.py  data_sync.py  fraud_alerts.py  health.py  ml_details.py  (+5 more)
backend/app/core/: __init__.py  encryption.py  exceptions.py  security.py
backend/app/db/: session.py
backend/app/middleware/: __init__.py  error_handler.py  timeout.py
backend/app/ml/: anomaly_detector.py  explainability.py  feature_engineering.py  fraud_classifier.py  model_registry.py  pipeline.py  risk_scorer.py
backend/app/models/: __init__.py  audit_log.py  case.py  credential.py  customer.py  fraud_alert.py  ml_model.py  payment_method.py  rule.py  training_job.py  transaction.py  user.py
backend/app/schemas/: alert.py  auth.py  credentials.py  settings.py  transaction.py
backend/app/services/: credential_service.py  data_sync_service.py  fraud_detection_service.py  ml_training_service.py  notification_service.py  seed_service.py
backend/app/streaming/: websocket_manager.py
backend/scripts/: create_admin_local.py  seed_data.py  seed_supabase_auth.py  setup_supabase.py  train_models.py  upload_to_supabase.py
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_config.py  test_exceptions.py  test_fraud_alerts.py  test_health.py  test_notifications.py  test_security.py  test_settings.py  test_simulator.py  test_transactions.py
(+122 files in other folders)
