[tool.poetry]
name = "finshield-backend"
version = "1.0.0"
description = "FinShield AI — Fraud Detection Backend"
authors = ["FinShield Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
aiosqlite = "^0.20.0"
alembic = "^1.14.0"
pydantic = {extras = ["email"], version = "^2.10.0"}
pydantic-settings = "^2.6.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.19"
redis = {extras = ["asyncio"], version = "^5.2.0"}
celery = {extras = ["redis"], version = "^5.4.0"}
httpx = "^0.28.0"
python-dotenv = "^1.0.1"
structlog = "^24.4.0"
cryptography = "^43.0.3"
# ML dependencies
scikit-learn = "^1.5.2"
xgboost = "^2.1.2"
numpy = "^2.1.3"
pandas = "^2.2.3"
shap = "^0.46.0"
onnxruntime = "^1.20.0"
imbalanced-learn = ">=0.13"
lightgbm = "^4.6.0"
# Notification
resend = "^2.5.0"
twilio = "^9.3.7"
# Supabase
supabase = "^2.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-timeout = "^2.3.1"
anyio = {extras = ["trio"], version = "^4.0"}
httpx = "^0.28.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
# Default timeout per test — avoids needing --timeout=60 on the CLI
timeout = 60
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"
